tests: remove python3.4
Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 ignore_errors=True
-envlist=py34,py35
+envlist=py35-django18
 
 [testenv]
 setenv =
@@ -15,4 +15,4 @@ deps =
     {toxinidir}/tests/django_project
 
 commands =
-    pytest {toxinidir}/tests/{envname} -v --tb=long
+    pytest tests -v --tb=long
