--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,9 @@
 ignore_errors=True
 envlist=py35-django18
 
+[tox:jenkins]
+envlist=py35-django{18,111}
+
 [testenv]
 setenv =
     DJANGO_SETTINGS_MODULE=django_project.settings
@@ -12,7 +15,8 @@ deps =
     pytest-django
     pytest-catchlog
 
-    django>=1.8,<1.9
+    django18: Django>=1.8,<1.9
+    django111: Django>=1.11,<1.12
     aiohttp-wsgi
 
     {toxinidir}/tests/django_project
