tests: add coverage statistics
Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
     pytest-asyncio
     pytest-django
     pytest-catchlog
+    pytest-cov
 
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<1.12
@@ -22,4 +23,8 @@ deps =
     {toxinidir}/tests/django_project
 
 commands =
-    pytest tests -v --tb=long
+    pytest tests \
+        -v --tb=long \
+        --cov={envsitepackagesdir}/aiohttp_json_rpc \
+        --cov-report term \
+        --cov-report html:htmlcov
