tests: add flake8 check
Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-ignore_errors=True
 envlist=py35-django18
 
 [tox:jenkins]
 envlist=py35-django{18,111}
 
 [testenv]
+ignore_errors=True
 setenv =
     DJANGO_SETTINGS_MODULE=django_project.settings
 
@@ -15,6 +15,7 @@ deps =
     pytest-django
     pytest-catchlog
     pytest-cov
+    flake8
 
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<1.12
@@ -28,3 +29,6 @@ commands =
         --cov={envsitepackagesdir}/aiohttp_json_rpc \
         --cov-report term \
         --cov-report html:htmlcov
+
+    flake8 aiohttp_json_rpc tests examples \
+        --exclude=env
