Change tox config to play well with Travis CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,40 @@
 [tox]
-envlist=py35-django18
+envlist=python
 
 [tox:jenkins]
 envlist=py35-django{18,111}
 
 [testenv]
 ignore_errors=True
-setenv =
-    DJANGO_SETTINGS_MODULE=django_project.settings
+passenv =
+  CI
+  TRAVIS
+  TRAVIS_*
 
 deps =
     pytest
     pytest-asyncio
-    pytest-django
     pytest-catchlog
     pytest-cov
-    flake8
 
-    django18: Django>=1.8,<1.9
-    django111: Django>=1.11,<1.12
+commands =
+    pytest tests \
+        -v --tb=long \
+        --cov={envsitepackagesdir}/aiohttp_json_rpc \
+        --cov-report term \
+        --cov-report html:htmlcov \
+        -m 'not django' \
+        {posargs}
+
+[testenv:django]
+setenv =
+    DJANGO_SETTINGS_MODULE=django_project.settings
+
+deps =
+    {[testenv]deps}
+
+    pytest-django
+
     aiohttp-wsgi
 
     {toxinidir}/tests/django_project
@@ -28,7 +44,23 @@ commands =
         -v --tb=long \
         --cov={envsitepackagesdir}/aiohttp_json_rpc \
         --cov-report term \
-        --cov-report html:htmlcov
+        --cov-report html:htmlcov \
+        {posargs}
 
+[testenv:django18]
+deps =
+    {[testenv:django]deps}
+    Django>=1.8,<1.9
+
+[testenv:django111]
+deps =
+    {[testenv:django]deps}
+    Django>=1.11,<1.12
+
+[testenv:lint]
+deps =
+    flake8
+
+commands =
     flake8 aiohttp_json_rpc tests examples \
         --exclude=env
