--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts= -v
 log_format = %(levelname)-8s %(name)-30s [%(asctime)s.%(msecs)03d] %(message)s
 log_date_format = %H:%M:%S
 markers =
