--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,7 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Topic :: Internet :: WWW/HTTP
+
+[aliases]
+release = dists upload
+dists = clean --all sdist bdist_wheel
