Update release scripts to have modern setuptools
Also remove now obsolete Makefile

Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -64,3 +64,19 @@ deps =
 commands =
     flake8 aiohttp_json_rpc tests examples \
         --exclude=env
+
+[testenv:dist]
+deps =
+    setuptools>=36.5.0
+
+commands =
+    python -m setup dists
+
+[testenv:release-to-pypi]
+deps =
+    {[testenv:dist]deps}
+    twine
+
+commands =
+    python -m setup release
+    twine upload dist/*
