Fix missing license file in wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 description = Implementation JSON-RPC 2.0 server and client using aiohttp on top of websockets transport
 long_description = file: README.rst
+license_file = LICENSE.txt
 keywords =
     aiohttp
     asyncio
