tox: release-to-pypi: remove build artefacts before building release
Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -73,10 +73,13 @@ commands =
     python -m setup dists
 
 [testenv:release-to-pypi]
+whitelist_externals = rm
+
 deps =
     {[testenv:dist]deps}
     twine
 
 commands =
+    rm -rf dist build *.egg-info
     python -m setup release
     twine upload dist/*
