Add async context manager JSON-RPC client w/ magic
* Create truly pythonic magic methods based RPC client implementation.
* Adopt doctests to magic method and client
* And add fallback test paths to pytest config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-addopts= -v
+testpaths=tests aiohttp_json_rpc
+norecursedirs=dist build .tox tests/django_project
+addopts=tests -v -rls --doctest-modules --tb=long --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html:htmlcov
 log_format = %(levelname)-8s %(name)-30s [%(asctime)s.%(msecs)03d] %(message)s
 log_date_format = %H:%M:%S
 markers =
