--- a/tox.ini
+++ b/tox.ini
@@ -18,13 +18,11 @@ deps =
     pytest-cov
 
 commands =
-    pytest tests \
-        -v --tb=long \
-        --cov={envsitepackagesdir}/aiohttp_json_rpc \
-        --cov-report term \
-        --cov-report html:htmlcov \
+    pytest {posargs} \
         -m 'not django' \
-        {posargs}
+        --cov={envsitepackagesdir}/aiohttp_json_rpc \
+        --doctest-ignore-import-errors \
+        {envsitepackagesdir}/aiohttp_json_rpc
 
 [testenv:django]
 setenv =
@@ -40,12 +38,9 @@ deps =
     {toxinidir}/tests/django_project
 
 commands =
-    pytest tests \
-        -v --tb=long \
+    pytest {posargs} \
         --cov={envsitepackagesdir}/aiohttp_json_rpc \
-        --cov-report term \
-        --cov-report html:htmlcov \
-        {posargs}
+        {envsitepackagesdir}/aiohttp_json_rpc
 
 [testenv:django18]
 setenv = {[testenv:django]setenv}
