Fix django tox test envs

--- a/tox.ini
+++ b/tox.ini
@@ -48,14 +48,22 @@ commands =
         {posargs}
 
 [testenv:django18]
+setenv = {[testenv:django]setenv}
+
 deps =
     {[testenv:django]deps}
     Django>=1.8,<1.9
 
+commands = {[testenv:django]commands}
+
 [testenv:django111]
+setenv = {[testenv:django]setenv}
+
 deps =
     {[testenv:django]deps}
     Django>=1.11,<1.12
+
+commands = {[testenv:django]commands}
 
 [testenv:lint]
 deps =
