--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,4 @@
 [pytest]
-testpaths=tests aiohttp_json_rpc
-norecursedirs=dist build .tox tests/django_project
-addopts=tests -v -rls --doctest-modules --tb=long --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html:htmlcov
+addopts=tests -v --tb=long --cov-report=html:htmlcov
 log_format = %(levelname)-8s %(name)-30s [%(asctime)s.%(msecs)03d] %(message)s
 log_date_format = %H:%M:%S
-markers =
-    django: mark a test as depending on Django
