tests: linting: ignore examples
Signed-off-by: Florian Scherf <f.scherf@pengutronix.de>

--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,7 @@ deps =
 
 commands =
     flake8 aiohttp_json_rpc tests examples \
-        --exclude=env
+        --exclude=env,examples
 
 [testenv:dist]
 deps =
